// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorzontalBarBlock can stack data 1`] = `
<div>
  <div
    class="recharts-responsive-container"
    style="width: 900px; height: 600px;"
  >
    <div
      class="recharts-wrapper"
      style="position: relative; cursor: default; width: 900px; height: 600px;"
    >
      <svg
        class="recharts-surface"
        height="600"
        version="1.1"
        viewBox="0 0 900 600"
        width="900"
      >
        <defs>
          <clippath
            id="recharts36-clip"
          >
            <rect
              height="570"
              width="810"
              x="90"
              y="0"
            />
          </clippath>
        </defs>
        <g
          class="recharts-cartesian-grid"
        >
          <g
            class="recharts-cartesian-grid-horizontal"
          >
            <line
              fill="none"
              height="570"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="900"
              y="0"
              y1="142.5"
              y2="142.5"
            />
            <line
              fill="none"
              height="570"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="900"
              y="0"
              y1="427.5"
              y2="427.5"
            />
            <line
              fill="none"
              height="570"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="900"
              y="0"
              y1="0"
              y2="0"
            />
            <line
              fill="none"
              height="570"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="900"
              y="0"
              y1="570"
              y2="570"
            />
          </g>
          <g
            class="recharts-cartesian-grid-vertical"
          >
            <line
              fill="none"
              height="570"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="110"
              x2="110"
              y="0"
              y1="0"
              y2="570"
            />
            <line
              fill="none"
              height="570"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="330"
              x2="330"
              y="0"
              y1="0"
              y2="570"
            />
            <line
              fill="none"
              height="570"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="550"
              x2="550"
              y="0"
              y1="0"
              y2="570"
            />
            <line
              fill="none"
              height="570"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="880"
              x2="880"
              y="0"
              y1="0"
              y2="570"
            />
            <line
              fill="none"
              height="570"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="90"
              y="0"
              y1="0"
              y2="570"
            />
            <line
              fill="none"
              height="570"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="900"
              x2="900"
              y="0"
              y1="0"
              y2="570"
            />
          </g>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
        >
          <line
            class="recharts-cartesian-axis-line"
            fill="none"
            height="30"
            stroke="#666"
            width="810"
            x="90"
            x1="90"
            x2="900"
            y="570"
            y1="570"
            y2="570"
          />
          <g
            class="recharts-cartesian-axis-ticks"
          >
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="30"
                stroke="#666"
                width="810"
                x="90"
                x1="110"
                x2="110"
                y="570"
                y1="576"
                y2="570"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="30"
                stroke="none"
                text-anchor="middle"
                width="810"
                x="110"
                y="586"
              >
                <tspan
                  dy="0.71em"
                  x="110"
                >
                  -3
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="30"
                stroke="#666"
                width="810"
                x="90"
                x1="330"
                x2="330"
                y="570"
                y1="576"
                y2="570"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="30"
                stroke="none"
                text-anchor="middle"
                width="810"
                x="330"
                y="586"
              >
                <tspan
                  dy="0.71em"
                  x="330"
                >
                  3
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="30"
                stroke="#666"
                width="810"
                x="90"
                x1="550"
                x2="550"
                y="570"
                y1="576"
                y2="570"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="30"
                stroke="none"
                text-anchor="middle"
                width="810"
                x="550"
                y="586"
              >
                <tspan
                  dy="0.71em"
                  x="550"
                >
                  9
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="30"
                stroke="#666"
                width="810"
                x="90"
                x1="880"
                x2="880"
                y="570"
                y1="576"
                y2="570"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="30"
                stroke="none"
                text-anchor="middle"
                width="810"
                x="880"
                y="586"
              >
                <tspan
                  dy="0.71em"
                  x="880"
                >
                  18
                </tspan>
              </text>
            </g>
          </g>
          <text
            class="recharts-text recharts-label"
            text-anchor="end"
            transform="rotate(-90, 90, 585)"
            x="90"
            y="585"
          >
            <tspan
              dy="0.355em"
              x="90"
            />
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
        >
          <line
            class="recharts-cartesian-axis-line"
            fill="none"
            height="570"
            stroke="#666"
            width="60"
            x="30"
            x1="90"
            x2="90"
            y="0"
            y1="0"
            y2="570"
          />
          <g
            class="recharts-cartesian-axis-ticks"
          >
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="570"
                stroke="#666"
                width="60"
                x="30"
                x1="84"
                x2="90"
                y="0"
                y1="142.5"
                y2="142.5"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="570"
                stroke="none"
                text-anchor="end"
                width="60"
                x="82"
                y="142.5"
              >
                <tspan
                  dy="0.355em"
                  x="82"
                >
                  2014/15
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="570"
                stroke="#666"
                width="60"
                x="30"
                x1="84"
                x2="90"
                y="0"
                y1="427.5"
                y2="427.5"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="570"
                stroke="none"
                text-anchor="end"
                width="60"
                x="82"
                y="427.5"
              >
                <tspan
                  dy="0.355em"
                  x="82"
                >
                  2015/16
                </tspan>
              </text>
            </g>
          </g>
          <text
            class="recharts-text recharts-label"
            text-anchor="middle"
            x="60"
            y="575"
          >
            <tspan
              dy="0.71em"
              x="60"
            />
          </text>
        </g>
        <g
          class="recharts-layer recharts-bar"
        >
          <g
            class="recharts-layer recharts-bar-rectangles"
          >
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 220,28.5 h 110 v 228 h -110 Z"
                fill="#ff0000"
                height="228"
                radius="0"
                stroke="#ff0000"
                width="110"
                x="220"
                y="28.5"
              />
            </g>
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 220,313.5 h -110 v 228 h 110 Z"
                fill="#ff0000"
                height="228"
                radius="0"
                stroke="#ff0000"
                width="-110"
                x="220"
                y="313.5"
              />
            </g>
          </g>
        </g>
        <g
          class="recharts-layer recharts-bar"
        >
          <g
            class="recharts-layer recharts-bar-rectangles"
          >
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 330,28.5 h 366.66666666666663 v 228 h -366.66666666666663 Z"
                fill="#ff0000"
                height="228"
                radius="0"
                stroke="#ff0000"
                width="366.66666666666663"
                x="330"
                y="28.5"
              />
            </g>
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 110,313.5 h 146.66666666666663 v 228 h -146.66666666666663 Z"
                fill="#ff0000"
                height="228"
                radius="0"
                stroke="#ff0000"
                width="146.66666666666663"
                x="110"
                y="313.5"
              />
            </g>
          </g>
        </g>
        <g
          class="recharts-layer recharts-bar"
        >
          <g
            class="recharts-layer recharts-bar-rectangles"
          >
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 696.6666666666666,28.5 h 183.33333333333337 v 228 h -183.33333333333337 Z"
                fill="#ff0000"
                height="228"
                radius="0"
                stroke="#ff0000"
                width="183.33333333333337"
                x="696.6666666666666"
                y="28.5"
              />
            </g>
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 256.66666666666663,313.5 h 36.666666666666686 v 228 h -36.666666666666686 Z"
                fill="#ff0000"
                height="228"
                radius="0"
                stroke="#ff0000"
                width="36.666666666666686"
                x="256.66666666666663"
                y="313.5"
              />
            </g>
          </g>
        </g>
      </svg>
      <div
        class="recharts-tooltip-wrapper"
        style="pointer-events: none; visibility: hidden; position: absolute; top: 0px; transform: translate(undefinedpx, undefinedpx);"
      >
        <div
          class="recharts-default-tooltip"
          style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); border: 1px solid #ccc; white-space: nowrap;"
        >
          <p
            class="recharts-tooltip-label"
            style="margin: 0px;"
          />
        </div>
      </div>
    </div>
    <div
      style="position: absolute; width: 0px; height: 0px; visibility: hidden; display: none;"
    />
  </div>
</div>
`;

exports[`HorzontalBarBlock renders basic chart correctly 1`] = `
<div>
  <div
    class="recharts-responsive-container"
    style="width: 900px; height: 600px;"
  >
    <div
      class="recharts-wrapper"
      style="position: relative; cursor: default; width: 900px; height: 600px;"
    >
      <svg
        class="recharts-surface"
        height="600"
        version="1.1"
        viewBox="0 0 900 600"
        width="900"
      >
        <defs>
          <clippath
            id="recharts4-clip"
          >
            <rect
              height="560"
              width="810"
              x="90"
              y="10"
            />
          </clippath>
        </defs>
        <g
          class="recharts-cartesian-grid"
        >
          <g
            class="recharts-cartesian-grid-horizontal"
          >
            <line
              fill="none"
              height="560"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="900"
              y="10"
              y1="150"
              y2="150"
            />
            <line
              fill="none"
              height="560"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="900"
              y="10"
              y1="430"
              y2="430"
            />
            <line
              fill="none"
              height="560"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="900"
              y="10"
              y1="10"
              y2="10"
            />
            <line
              fill="none"
              height="560"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="900"
              y="10"
              y1="570"
              y2="570"
            />
          </g>
          <g
            class="recharts-cartesian-grid-vertical"
          >
            <line
              fill="none"
              height="560"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="110"
              x2="110"
              y="10"
              y1="10"
              y2="570"
            />
            <line
              fill="none"
              height="560"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="346.9230769230769"
              x2="346.9230769230769"
              y="10"
              y1="10"
              y2="570"
            />
            <line
              fill="none"
              height="560"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="583.8461538461538"
              x2="583.8461538461538"
              y="10"
              y1="10"
              y2="570"
            />
            <line
              fill="none"
              height="560"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="880"
              x2="880"
              y="10"
              y1="10"
              y2="570"
            />
            <line
              fill="none"
              height="560"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="90"
              x2="90"
              y="10"
              y1="10"
              y2="570"
            />
            <line
              fill="none"
              height="560"
              stroke="#ccc"
              stroke-dasharray="3 3"
              width="810"
              x="90"
              x1="900"
              x2="900"
              y="10"
              y1="10"
              y2="570"
            />
          </g>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis recharts-xAxis xAxis"
        >
          <line
            class="recharts-cartesian-axis-line"
            fill="none"
            height="30"
            stroke="#666"
            width="810"
            x="90"
            x1="90"
            x2="900"
            y="570"
            y1="570"
            y2="570"
          />
          <g
            class="recharts-cartesian-axis-ticks"
          >
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="30"
                stroke="#666"
                width="810"
                x="90"
                x1="110"
                x2="110"
                y="570"
                y1="576"
                y2="570"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="30"
                stroke="none"
                text-anchor="middle"
                width="810"
                x="110"
                y="586"
              >
                <tspan
                  dy="0.71em"
                  x="110"
                >
                  -3
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="30"
                stroke="#666"
                width="810"
                x="90"
                x1="346.9230769230769"
                x2="346.9230769230769"
                y="570"
                y1="576"
                y2="570"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="30"
                stroke="none"
                text-anchor="middle"
                width="810"
                x="346.9230769230769"
                y="586"
              >
                <tspan
                  dy="0.71em"
                  x="346.9230769230769"
                >
                  1
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="30"
                stroke="#666"
                width="810"
                x="90"
                x1="583.8461538461538"
                x2="583.8461538461538"
                y="570"
                y1="576"
                y2="570"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="30"
                stroke="none"
                text-anchor="middle"
                width="810"
                x="583.8461538461538"
                y="586"
              >
                <tspan
                  dy="0.71em"
                  x="583.8461538461538"
                >
                  5
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="30"
                stroke="#666"
                width="810"
                x="90"
                x1="880"
                x2="880"
                y="570"
                y1="576"
                y2="570"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="30"
                stroke="none"
                text-anchor="middle"
                width="810"
                x="880"
                y="586"
              >
                <tspan
                  dy="0.71em"
                  x="880"
                >
                  10
                </tspan>
              </text>
            </g>
          </g>
          <text
            class="recharts-text recharts-label"
            text-anchor="end"
            transform="rotate(-90, 90, 585)"
            x="90"
            y="585"
          >
            <tspan
              dy="0.355em"
              x="90"
            />
          </text>
        </g>
        <g
          class="recharts-layer recharts-cartesian-axis recharts-yAxis yAxis"
        >
          <line
            class="recharts-cartesian-axis-line"
            fill="none"
            height="560"
            stroke="#666"
            width="60"
            x="30"
            x1="90"
            x2="90"
            y="10"
            y1="10"
            y2="570"
          />
          <g
            class="recharts-cartesian-axis-ticks"
          >
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="560"
                stroke="#666"
                width="60"
                x="30"
                x1="84"
                x2="90"
                y="10"
                y1="150"
                y2="150"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="560"
                stroke="none"
                text-anchor="end"
                width="60"
                x="82"
                y="150"
              >
                <tspan
                  dy="0.355em"
                  x="82"
                >
                  2014/15
                </tspan>
              </text>
            </g>
            <g
              class="recharts-layer recharts-cartesian-axis-tick"
            >
              <line
                class="recharts-cartesian-axis-tick-line"
                fill="none"
                height="560"
                stroke="#666"
                width="60"
                x="30"
                x1="84"
                x2="90"
                y="10"
                y1="430"
                y2="430"
              />
              <text
                class="recharts-text recharts-cartesian-axis-tick-value"
                fill="#666"
                height="560"
                stroke="none"
                text-anchor="end"
                width="60"
                x="82"
                y="430"
              >
                <tspan
                  dy="0.355em"
                  x="82"
                >
                  2015/16
                </tspan>
              </text>
            </g>
          </g>
          <text
            class="recharts-text recharts-label"
            text-anchor="middle"
            x="60"
            y="575"
          >
            <tspan
              dy="0.71em"
              x="60"
            />
          </text>
        </g>
        <g
          class="recharts-layer recharts-bar"
        >
          <g
            class="recharts-layer recharts-bar-rectangles"
          >
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 287.69230769230774,38 h 177.69230769230768 v 72 h -177.69230769230768 Z"
                fill="#ff0000"
                height="72"
                radius="0"
                stroke="#ff0000"
                width="177.69230769230768"
                x="287.69230769230774"
                y="38"
              />
            </g>
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 287.69230769230774,318 h -177.69230769230774 v 72 h 177.69230769230774 Z"
                fill="#ff0000"
                height="72"
                radius="0"
                stroke="#ff0000"
                width="-177.69230769230774"
                x="287.69230769230774"
                y="318"
              />
            </g>
          </g>
        </g>
        <g
          class="recharts-layer recharts-bar"
        >
          <g
            class="recharts-layer recharts-bar-rectangles"
          >
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 287.69230769230774,114 h 592.3076923076923 v 72 h -592.3076923076923 Z"
                fill="#ff0000"
                height="72"
                radius="0"
                stroke="#ff0000"
                width="592.3076923076923"
                x="287.69230769230774"
                y="114"
              />
            </g>
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 287.69230769230774,394 h 236.9230769230768 v 72 h -236.9230769230768 Z"
                fill="#ff0000"
                height="72"
                radius="0"
                stroke="#ff0000"
                width="236.9230769230768"
                x="287.69230769230774"
                y="394"
              />
            </g>
          </g>
        </g>
        <g
          class="recharts-layer recharts-bar"
        >
          <g
            class="recharts-layer recharts-bar-rectangles"
          >
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 287.69230769230774,190 h 296.1538461538461 v 72 h -296.1538461538461 Z"
                fill="#ff0000"
                height="72"
                radius="0"
                stroke="#ff0000"
                width="296.1538461538461"
                x="287.69230769230774"
                y="190"
              />
            </g>
            <g
              class="recharts-layer recharts-bar-rectangle"
            >
              <path
                class="recharts-rectangle"
                d="M 287.69230769230774,470 h 59.23076923076917 v 72 h -59.23076923076917 Z"
                fill="#ff0000"
                height="72"
                radius="0"
                stroke="#ff0000"
                width="59.23076923076917"
                x="287.69230769230774"
                y="470"
              />
            </g>
          </g>
        </g>
      </svg>
      <div
        class="recharts-legend-wrapper"
        style="position: absolute; width: 870px; height: 50px; left: 30px; top: 10px;"
      >
        <ul
          class="recharts-default-legend"
          style="padding: 0px; margin: 0px; text-align: center;"
        >
          <li
            class="recharts-legend-item legend-item-0"
            style="display: inline-block; margin-right: 10px;"
          >
            <svg
              class="recharts-surface"
              height="14"
              style="display: inline-block; vertical-align: middle; margin-right: 4px;"
              version="1.1"
              viewBox="0 0 32 32"
              width="14"
            >
              <path
                class="recharts-legend-icon"
                d="M0,4h32v24h-32z"
                fill="#ff0000"
                stroke="none"
              />
            </svg>
            <span
              class="recharts-legend-item-text"
            >
              Unauthorised absence rate
            </span>
          </li>
          <li
            class="recharts-legend-item legend-item-1"
            style="display: inline-block; margin-right: 10px;"
          >
            <svg
              class="recharts-surface"
              height="14"
              style="display: inline-block; vertical-align: middle; margin-right: 4px;"
              version="1.1"
              viewBox="0 0 32 32"
              width="14"
            >
              <path
                class="recharts-legend-icon"
                d="M0,4h32v24h-32z"
                fill="#ff0000"
                stroke="none"
              />
            </svg>
            <span
              class="recharts-legend-item-text"
            >
              Overall absence rate
            </span>
          </li>
          <li
            class="recharts-legend-item legend-item-2"
            style="display: inline-block; margin-right: 10px;"
          >
            <svg
              class="recharts-surface"
              height="14"
              style="display: inline-block; vertical-align: middle; margin-right: 4px;"
              version="1.1"
              viewBox="0 0 32 32"
              width="14"
            >
              <path
                class="recharts-legend-icon"
                d="M0,4h32v24h-32z"
                fill="#ff0000"
                stroke="none"
              />
            </svg>
            <span
              class="recharts-legend-item-text"
            >
              Authorised absence rate
            </span>
          </li>
        </ul>
      </div>
      <div
        class="recharts-tooltip-wrapper"
        style="pointer-events: none; visibility: hidden; position: absolute; top: 0px; transform: translate(undefinedpx, undefinedpx);"
      >
        <div
          class="recharts-default-tooltip"
          style="margin: 0px; padding: 10px; background-color: rgb(255, 255, 255); border: 1px solid #ccc; white-space: nowrap;"
        >
          <p
            class="recharts-tooltip-label"
            style="margin: 0px;"
          />
        </div>
      </div>
    </div>
    <div
      style="position: absolute; width: 0px; height: 0px; visibility: hidden; display: none;"
    />
  </div>
</div>
`;
